--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -20,6 +20,7 @@
     "@gorhom/bottom-sheet": "^5",
     "@orpc/client": "catalog:",
     "@orpc/tanstack-query": "^1.12.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.8.1",
     "@tanstack/react-query": "^5.90.12",
