--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,11 +3,11 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsdown",
+    "build": "tsc",
     "check-types": "tsc -b",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node --import tsx dist/src/index.js"
   },
   "dependencies": {
     "@fast-expo/api": "workspace:*",
