--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,14 +1,18 @@
 packages:
   - apps/*
   - packages/*
+
 catalog:
-  dotenv: ^17.2.2
-  zod: ^4.1.13
-  typescript: ^5
-  "@orpc/server": ^1.12.2
+  "@better-auth/expo": ^1.4.9
+  "@orpc/client": ^1.12.2
   "@orpc/openapi": ^1.12.2
+  "@orpc/server": ^1.12.2
   "@orpc/zod": ^1.12.2
   better-auth: ^1.4.9
-  "@orpc/client": ^1.12.2
-  "@better-auth/expo": ^1.4.9
-  drizzle-orm: ^0.45.1
+  dotenv: ^17.2.2
+  drizzle-orm: 0.45.1
+  typescript: ^5
+  zod: ^4.1.13
+
+onlyBuiltDependencies:
+  - esbuild
