--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,13 +21,13 @@
     "better-auth": "catalog:",
     "dotenv": "catalog:",
     "fastify": "^5.3.3",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@fast-expo/config": "workspace:*",
     "@types/node": "^22.13.14",
     "tsdown": "^0.16.5",
-    "tsx": "^4.19.2",
     "typescript": "catalog:"
   }
 }
